fix date input overlapping

--- a/src/app/components/modal/modal.component.css
+++ b/src/app/components/modal/modal.component.css
@@ -28,3 +28,29 @@
   max-width: 100%;
   box-sizing: border-box;
 }
+
+/* Fix iOS date input overflow issue */
+:host ::ng-deep .modal-container input[type="date"],
+:host ::ng-deep .modal-container input[type="datetime-local"],
+:host ::ng-deep .modal-container input[type="time"] {
+  width: 100% !important;
+  max-width: 100% !important;
+  min-width: 0 !important;
+  box-sizing: border-box !important;
+  -webkit-appearance: none;
+  -moz-appearance: textfield;
+}
+
+/* Ensure form containers don't overflow */
+:host ::ng-deep .modal-container form {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+/* Ensure all form elements are constrained */
+:host ::ng-deep .modal-container form > * {
+  max-width: 100%;
+  box-sizing: border-box;
+}
